--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
@@ -17,12 +17,10 @@
         <button type="button" class="btn btn-secondary"><a href="@Url.Action("System_Auswählen","Konfigurator",new{ userName = @ViewBag.UserNameItem} )">2. System auswählen</a></button>
         <button type="button" class="btn btn-secondary">3. Parameter einstellen</button>
     </div>
-    <div style="display:flex;gap: 20px;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
-        <button onclick="hilfe()" style="border:none"><img src="/Image/help.png" width="40" hight="40"/></button>
+    <div style="display:flex;gap: 20px;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;align-items: center;">
+        <button onclick="hilfe()" style="border:none"><img src="/Image/help.png" width="60" hight="60"/></button>
         <h2>Füllen Sie den Konfigurator mit Daten aus!</h2>
     </div>
-   
-
 
     <form asp-action="SaveOrder" enctype="multipart/form-data" asp-controller="Konfigurator">
   
